| Summary: | ASTERISK-22668: Crash: chan_pjsip extension fallthrough | ||
| Reporter: | John Bigelow (jbigelow) | Labels: | |
| Date Opened: | 2013-10-08 10:29:55 | Date Closed: | 2013-10-13 10:48:01 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Channels/chan_pjsip |
| Versions: | 12.0.0-alpha1 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Asterisk 12 branch r400669 | Attachments: | ( 0) backtrace.txt ( 1) backtrace-answer-fallthrough.txt ( 2) full.txt ( 3) full-answer-fallthrough.txt |
| Description: | UPDATE:
After talking to rmudgett, simply answering the call with nothing else causes the crash. {code} exten => 999,1,Answer {code} ORIGINAL REPORT: Steps: * Login Agent from a phone * Login the same Agent from another phone * Crash Errors printed: {code} [Oct 8 10:14:54] ERROR[9540] astobj2.c: user_data is NULL [Oct 8 10:14:54] ERROR[9540] astobj2.c: FRACK!, Failed assertion 0 (0) {code} agents.conf: {code} [1001] fullname=Phone A ackcall=yes {code} extensions.conf: {code} exten => 551,1,AgentLogin(1001) {code} Backtrace and full log is attached. | ||
| Comments: | By: Richard Mudgett (rmudgett) 2013-10-08 11:01:22.553-0500 This is a race condition in chan_pjsip. The agent pool has rejected the duplicate login, the second channel has run off the end of dialplan, and is being hung up. By: John Bigelow (jbigelow) 2013-10-08 11:34:17.010-0500 Attached the following files of the crash when calling Answer() and auto falling through: * backtrace-answer-fallthrough.txt * full-answer-fallthrough.txt | ||